--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,17 +1,20 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
+
+#link_to "Label", :controller => :my_controller, :action => :index
+
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th= link_to "Movie Title", :order => 'sort'
       %th Rating
       %th Release Date
       %th More Info
   %tbody
     - @movies.each do |movie|
       %tr
-        %td= movie.title 
+        %td= movie.title
         %td= movie.rating
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
